/*
 * Copyright (C) 2023 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package android.os.statsd.statsd;

import "frameworks/proto_logging/stats/atoms.proto";
import "frameworks/proto_logging/stats/atom_field_options.proto";
import "frameworks/proto_logging/stats/attribution_node.proto";

option java_package = "com.android.os.statsd";

extend Atom {
    optional TestExtensionAtomReported test_extension_atom_reported =
            660 [(module) = "cts", (module) = "statsdtest"];
    optional TestRestrictedAtomReported test_restricted_atom_reported = 672
    [(module) = "cts", (android.os.statsd.restriction_category) = RESTRICTION_DIAGNOSTIC];
}

message TestExtensionAtomNestedMessage {
    repeated int64 long_field = 1;
}

/* Test atom, is not logged anywhere */
message TestExtensionAtomReported {
    repeated AttributionNode attribution_node = 1;
    optional int32 int_field = 2;
    optional int64 long_field = 3;
    optional float float_field = 4;
    optional string string_field = 5;
    optional bool boolean_field = 6;
    enum State {
        UNKNOWN = 0;
        OFF = 1;
        ON = 2;
    }
    optional State state = 7;
    optional TestExtensionAtomNestedMessage bytes_field =
            8 [(android.os.statsd.log_mode) = MODE_BYTES];
    repeated int32 repeated_int_field = 9;
    repeated int64 repeated_long_field = 10;
    repeated float repeated_float_field = 11;
    repeated string repeated_string_field = 12;
    repeated bool repeated_boolean_field = 13;
    repeated State repeated_enum_field = 14;
}

/* Test restricted atom, is not logged anywhere */
message TestRestrictedAtomReported {
    optional int32 int_field = 1;
    optional int64 long_field = 2;
    optional float float_field = 3;
    optional string string_field = 4;
    optional bool boolean_field = 5;
}
